<resources>
    <string name="app_name">System Bridge</string>
    <string name="activity_open_url">Open URL on Bridge</string>
    <string name="activity_settings">System Bridge Settings</string>
    <string name="add_bridge">Add Bridge</string>
    <string name="add">Add</string>
    <string name="api_key">API Key</string>
    <string name="api_port">API Port</string>
    <string name="bridges_discovered">Discovered Bridges</string>
    <string name="bridges">Bridges</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="edit_bridge_delete_confirmation">Are you sure you want to delete this Bridge?</string>
    <string name="edit_bridge">Edit Bridge</string>
    <string name="generic_error">An error occurred</string>
    <string name="generic_success">Success</string>
    <string name="host">Host</string>
    <string name="name">Name</string>
    <string name="open_url">Open URL</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="test_connection_error">Error connecting to server</string>
    <string name="test_connection_in_progress">Testing Connection</string>
    <string name="url_error">Error parsing URL</string>
    <string name="validation_error_a">You must enter a</string>
    <string name="validation_error_an">You must enter an</string>
    <string name="ws_port">WebSocket Port</string>
</resources>